# cdm-data-cli

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/medical_cli/: __init__.py  cli.py
src/medical_cli/commands/: __init__.py  export.py  extract.py  transform.py  validate.py
src/medical_cli/core/: __init__.py  data_exporter.py  data_extractor.py  data_transformer.py  data_validator.py
src/medical_cli/core/adapters/: edc_wide_adapter.py
src/medical_cli/utils/: __init__.py  file_helpers.py  logger.py
tests/: __init__.py  conftest.py  test_data_validator.py
